www/css/style.css
/* latin-ext */
@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 400;
	src: local('Raleway'), local('Raleway-Regular'), url("/css/raleway-latin-ext.woff2") format('woff2');
	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 400;
	src: local('Raleway'), local('Raleway-Regular'), url() format('woff2');
	src: local('Raleway'), local('Raleway-Regular'), url("/css/raleway-latin.woff2") format('woff2');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
}
h1, h2, h3, h4, h5, h6, li, a.btn, p.login{
	font-family: Raleway, sans-serif;
	font-style: normal;
	font-variant: normal;	
}

nav, #menu {
	background: #024;
	padding: 0;
}
nav {
	position: absolute;
	width: 100%;
	top: 0;
	left: 0;
	right: 0;
	height: 3em;
	display: table;
	white-space: nowrap;
}
nav #menu, nav #login {
	display: table-cell;
}
nav #login, nav #usermenu a {
	padding: 0 .75em;
	margin: 0;
}
nav #login {
	text-align: right;
}

nav #menu {
	margin: .1em auto 0 auto;
	text-align: center;
	margin: 0;
	z-index: 3;
} 
nav li {
	display: inline-block;
	margin: auto .25em;
}
nav #menu_toggle {
	margin: 0;
	display: none;
}
nav li, nav #menu_toggle, nav #login {
	line-height: 3em;
	height: 3em;
}
nav a {
	display: inline-block;
	margin: auto;
	color: white;
	text-decoration: none;
	margin: 0 .75em;
}
nav li.active, nav li:hover {
	border-bottom: 2px solid white;
}
nav #usermenu {
	display: none;
	position: absolute;
	top: 0;
	right: 0;
	margin: 0;
	background: #fff;
	padding: 0;
}
nav #usermenu li:first-child, nav #usermenu li:first-child a {
	line-height: 3em;
	height: 3em;
}
nav #usermenu li, nav #usermenu li a {
	line-height: 2em;
	height: 2em;
	color: #024;
	border: none;
	display: block;
	margin: 0;
}
nav #usermenu:target {
	display: block;
}

@media(max-width: 800px){
	nav #menu, nav #menu li.active, nav #menu_toggle, nav #login {
		position: absolute;
	}
	nav #menu li.active {
		top: -3em; /* -3em for absolute, 0 for fixed.. huh? */
		left: 0;
	}

	nav {
		z-index: 1000;
	}
	nav #login {
		z-index: 2000;
	}
	nav li.active, nav li:hover {
		border: none;
	}
	nav #menu {
		text-align: left;
		top: 3em;
		left: 0;
		right: 0;
		padding: 0;
	}
	nav #menu li, nav #menu li a {
		margin-left: 0;
		display: block;
	}
	nav #menu, nav #menu li.active a {
		padding-left: 1em;
	}
	nav #menu li {
		display: none;
	}
	nav #menu:target li, nav #menu li.active {
		display: block;
	}

	nav #menu_toggle {
		display: block;
		top: 0;
		left: 0;
		right: 0;
	}
	nav #menu:target li.active {
		right: 0;
	}
	nav #menu_toggle {
		text-align: center;
	}
	nav #menu_toggle:hover, nav #login:hover {
		background: rgba(255,255,255,.1);
	}

	nav #login {
		right: 0;
		top: 0;
	}
}
header {
	margin-top: 3rem;
	height: 16rem;
	overflow: hidden;
	text-align: right;
	color: #fff;
	font-family: monospace;
	padding: 1rem;
	font-size: 4em;
	background: url('pvv-background.png') no-repeat 1% 50% #024;
	background-size: contain;
}
main {
	max-width: 60rem;
	margin: -7rem auto 0 auto;
	padding: 0;
}
article {
	padding: .1rem 1rem 1rem 1rem;
	margin: 0 1rem 0 1rem;
	background: white;

	z-index: 2;
	position: relative;
}
article p {
	text-align: justify;
	hyphens: auto;
}
article:first-child {
	border-radius: .5rem .5rem 0 0;
}
main:before {
	content: " ";
	display: block;
	position: absolute;
	top: 16rem;
	left: 1rem;
	right: 1rem;
	margin: 0 auto;
	height: 8em;
	z-index: 1;
	max-width: 58rem;
	box-shadow: 0 -.2rem .15rem rgba(0,0,0,.3);
	border-radius: 0 0 .3em .3em;
	background: white;
}

.split {
	display: table;
	width: 100%;
	table-layout: fixed;
	border-spacing: 1em;
}
.split > * {
	display: table-cell;
}

.subtitle {
	font-weight: bold;
}

.ruler {
	border: none;
	border-bottom: 1px dotted rgba(0,0,0,.5);
}

a.btn {
	text-decoration: none;
	border: 1px solid #048;
	color: #048;
	padding: .2em 1em;
	border-radius: .2em;
	white-space: nowrap;
	display: inline-block;
	margin-bottom: .25em;
}
a.btn:hover {
	border-color: #084;
	background: #eee;
	color: #084;
}
a.btn:active {
	border-color: #084;
	background: #084;
	color: white;
}

.boxinput {
	text-decoration: none;
	border: 1px solid #048;
	color: #048;
	padding: .2em .4em;
	border-radius: .2em;
	display: inline-block;
	margin-bottom: .25em;
	resize: none;
}

.noborder {
	border: none !important;
}

.subnote {
	margin-top: 0;
	color: gray;
	font-size: .7em;
	font-style: italic;
}

.no-chin {
	margin-bottom: 0;
}

.icon.subscribe {
	color: white;
	background: #082;
	border-radius: 1em;
	width: 1em;
	line-height: 1em;
	text-align: center;
}

@media screen and (max-width: 50rem) {
	.split, .split > * {
		display: block;
	}
	img.float-right {
		display: none;
	}
	nav li {
		margin: auto .5em;
	}
	header {
		font-size: 2em;
	}
	main {
		margin: -13rem auto 0 auto;
	}
	article {
		margin: 0 .5rem 0 .5rem;
	}
	main:before {
		left: .5rem;
		right: .5rem;
	}
}
@media screen and (max-width: 23rem) {
	body {
		font-size: 0.8em;
	}
	header {
		margin-top: 2.4rem;
	}
	main:before {
		top: 13rem;
		height: 13em;
	}
}



.collapsable {
	display: none;
}
.collapsable:target {
	display: block;
}

.noselect {
	/* iOS Safari */
	-webkit-touch-callout: none;
	/* Safari */
	-webkit-user-select: none;
	/* Konqueror HTML */
	-khtml-user-select: none;
	/* Firefox */
	-moz-user-select: none;
	/* Internet Explorer/Edge */
	-ms-user-select: none;
	/* Non-prefixed version, currently supported by Chrome and Opera */
	user-select: none;
}

